Add Lottie animations and update styles

--- a/src/assets/languages/es.json
+++ b/src/assets/languages/es.json
@@ -3,37 +3,38 @@
     "hola": "Hola",
     "title": "Reinventamos las apuestas deportivas",
     "subtitle": "Canal Interactivo con IA para Operadores iGaming",
-    "text": "Nuestro canal interactivo, impulsado por inteligencia artificial, proporciona comunicación bidireccional eficiente entre usuarios y operadores iGaming.",
+    "text": "Con IA de última generación, tus jugadores pueden apostar de manera sencilla y directa a través de su app de mensajería favorita. ChatBet responde al instante y de forma natural, ofreciendo una experiencia de apuestas fluida, rápida y sin complicaciones.",
     "secondtext": " Esta solución permite a sus jugadores realizar apuestas deportivas de manera rápida y sencilla, a través de su canal de mensajería preferido, omitiendo la necesidad de acceder a la interfaz de usuario de su sportsbook.",
     "thankstoia": "Gracias a la IA",
     "thankstoiatwo": "simula una conversación entre seres humanos y le habla a sus jugadores de forma natural, proporcionando una comunicación inteligente, tal como lo hacen las personas, lo que brinda una experiencia única, directa y sin fricciones.",
     
-    "Features":"+ Funciones",
+    "Features":"Potencie su Operación con ChatBet",
     "Potencie":"Potencie su Operación con ChatBet ",
     "Generación":"Generación de Noticias:",
-    "Mantenga":"Mantenga sus usuarios informados con las últimas noticias, eventos del momento, actualizaciones relevantes, recomendaciones y sugerencias que permitan apuestas inteligentes.",
+    "Mantenga":"Permite que tus jugadores apuesten desde cualquier lugar—ya sea a través de WhatsApp, Telegram, tu app o en la web. ChatBet se integra fácilmente en todos los canales para ofrecer una experiencia de apuestas sin interrupciones.",
     "Pronósticos":"Pronósticos, Tips y Estadísticas:",
     "Proporcione":"Proporcione pronósticos detallados, consejos expertos y estadísticas actualizadas para mejorar la experiencia de apuestas de sus usuarios.",
     "Bonos":"Bonos y Promociones:",
     "Incentive":"Incentive la participación y fidelidad de sus jugadores con ofertas atractivas.",
 
-    "Beneficios":" Beneficios",
-    "Reducción":"Reducción de la Fricción: ",
-    "Minimiza":" Minimiza barreras de entrada al eliminar la necesidad de apostar en interfaces complicadas.",
-    "Machine":" Machine Learning:",
-    "Utiliza":"Utiliza algoritmos IA para el procesamiento del lenguaje natural (NLP) y el aprendizaje automático, los cuales mejoran continuamente su capacidad de comprensión y respuesta a la intención detrás de las solicitudes de los usuarios. ",
-    "IA":"IA Entrenada al iGaming: ",
-    "Responde":"Responde de forma intuitiva  y simple, en el idioma configurado, a términos usados frecuentemente en apuestas deportivas y reconoce modismos locales, cyberlenguaje y otros idiomas. ",
+    "Beneficios":" Recomendaciones IA para Apuestas Personalizadas de ChatBet",
+    "Reducción":"Apuestas Personalizadas:",
+    "Minimiza":" ChatBet ajusta las apuestas según preferencias del usuario, aumentando el engagement.",
+    "Machine":" Optimización en Tiempo Real:",
+    "Utiliza":"La IA mejora las recomendaciones al instante, impulsando apuestas más grandes y frecuentes.",
+    "IA":"Aprendizaje Continuo:",
+    "Responde":"Ajustes dinámicos para ofrecer las mejores opciones y aumentar la retención.",
 
     "CómoFunciona": "¿Cómo Funciona ChatBet?",
     "integramos": "Nos integramos con su proveedor de PAM o agregador para activar",
     "sitio": "en su sitio de web de apuestas. Desde ahí, podrá personalizar a su gusto, la información que quiere compartir, disponibilizar sus ofertas de apuestas deportivas, conectar sus usuarios y transformar la forma de realizar apuestas deportivas.",
 
-    "Hablacon" : "Habla con la IA de forma natural y recibe respuesta.",
-    "Buscacon" : "Busca con facilidad deportes y equipos.",
+    "Hablacon" : "Apuesta en segundos con respuestas rápidas y sin esperas.",
+    "Buscacon" : "Tus transacciones y datos siempre protegido ",
     "Conuna" : "Con una Interfaz sencilla, encuentra partidos en tu Canal preferido.",
-    "Seleccionacuánto" : "Selecciona cuánto apostar.",
-    "LaIA" : "La IA ofrece opciones y ganancias, la jugada final la decide el usuario.",
+    "title1" : "Apuestas Instantáneas",
+    "title2" : "Seguridad Garantizada",
+    "title3" : "Multiplataforma",
 
     "Sencilla" : "Sencilla Integración",
     "Personalice" : "Personalice",
@@ -62,8 +63,8 @@
     "PaisT": "Pais",
     "Pais": "Ingrese su ciudad y/o país de donde nos contactas",
 
-    "Get": "¡Obtenga una demo!",
-
+    "Get": "¡Obtenga una demostración!",
+    
     "headerone":"+Funciones",
     "headertwo":"Beneficios",
     "headertree":"¿Cómo Funciona?",
@@ -109,5 +110,41 @@
 
     "slidefiveoneone": "Informes:",
     "slidefivetwotwo": "Reciba reportes de transacciones, apuestas realizadas con su respectivo ID, montos apostados, eventos en los que jugaron, estadísticas, indicadores de rendimiento y analice métricas, etc",
-    "slidefivethreeone": "La IA de ChatBet, se entrena permanentemente con su performance."
+    "slidefivethreeone": "La IA de ChatBet, se entrena permanentemente con su performance.",
+
+    "mascientocincuenta": "Más de 150,000 jugadores",
+    "activos": "activos y jugando:",
+    "porquedeberias": "¿Por que Deberias integrar Chat Bet?",
+    "conchatbet": "Con ChatBet, retener jugadores nunca ha sido tan fácil. Nuestra IA personaliza cada apuesta, creando experiencias únicas que mantienen los usuarios comprometidos y aumentan tu crecimiento.",
+    "optimiza": "Optimiza el turnover, atrae nuevos apostadores y mejora la retención, todo mientras maximizas el valor de cada apuesta. Además, gestiona operaciones en múltiples canales de manera ágil y segura, adaptada a cada jugador.",
+
+    "entiendeyguia": "Entiende, guia y mejora",
+    "laexperiencia": "la experiencia de apuestas",
+    "depositos": "Depósitos y Retiros Seguros en Fiat o Cripto.",
+    "tususuarios": "Con ChatBet, tus usuarios pueden realizar depósitos y retiros de forma segura en monedas locales o criptomonedas a través de cualquier canal instalado, como WhatsApp o Telegram. Todas las transacciones se procesan de manera segura y sin necesidad de salir del chat, garantizando una experiencia fluida y sin complicaciones.",
+    "casinos": "Casino: Jugadas inteligentes",
+    "soporte": "Soporte: Respuestas instantáneas.",
+    "sugerencias": "Sugerencias de Juego: Recomendaciones basadas en datos.",
+    "soporterespuestas": "Soporte: Respuestas instantáneas.",
+    "promociones": "Promociones",
+    "ofertas": "Ofertas personalizadas",
+    "noticias": "Noticias: Eventos clave en tiempo real",
+
+
+    "sincomplicaciones": "Apuestas Sin Complicaciones para tus Usuarios—Todo en un Chat",
+    "tususuariosapuestan": "Con ChatBet, tus usuarios apuestan tan fácil como enviar un mensaje. Sin navegar sitios ni registros largos, todo ocurre en una sola conversación.:",
+    "tususuarioshacen": "Tus usuarios hacen sus apuestas en segundos",
+    "enlugar": "En lugar de buscar, simplemente escriben en el chat la apuesta que desean hacer.",
+    "ingresan": "Ingresan el monto a apostar",
+    "soloindican": "Tus usuarios solo indican cuánto quieren apostar y están listos.",
+    "confirman": "Confirman y la apuesta se realiza al instante 🤑",
+    "unmensajerapido": "Un mensaje rápido de confirmación, y la apuesta está activa—sin retrasos ni complicaciones.",
+    "esteproceso": "Este proceso fluido mantiene a los usuarios comprometidos, ofreciendo una experiencia rápida y sin fricciones en su plataforma de mensajería favorita.",
+
+    "proteccion": "Protección de primer nivel",
+    "laplataforma": "La plataforma segura que tu negocio necesita.",
+    "segura": "La seguridad es esencial en nuestra plataforma. Con AWS, PCI DSS, y ISO 27001, garantizamos operaciones protegidas y datos seguros, cumpliendo con los más altos estándares de la industria.",
+    "unanse": "¡Únase a la emoción!"
+
+
 }   
