--- a/src/assets/languages/es.json
+++ b/src/assets/languages/es.json
@@ -30,7 +30,7 @@
     "sitio": "en su sitio de web de apuestas. Desde ahí, podrá personalizar a su gusto, la información que quiere compartir, disponibilizar sus ofertas de apuestas deportivas, conectar sus usuarios y transformar la forma de realizar apuestas deportivas.",
 
     "Hablacon" : "Apuesta en segundos con respuestas rápidas y sin esperas.",
-    "Buscacon" : "Tus transacciones y datos siempre protegido ",
+    "Buscacon" : "Tus transacciones y datos siempre protegidos",
     "Conuna" : "Con una Interfaz sencilla, encuentra partidos en tu Canal preferido.",
     "title1" : "Apuestas Instantáneas",
     "title2" : "Seguridad Garantizada",
@@ -114,8 +114,8 @@
 
     "mascientocincuenta": "Más de 150,000 jugadores",
     "activos": "activos y jugando:",
-    "porquedeberias": "¿Por que Deberias integrar Chat Bet?",
-    "conchatbet": "Con ChatBet, retener jugadores nunca ha sido tan fácil. Nuestra IA personaliza cada apuesta, creando experiencias únicas que mantienen los usuarios comprometidos y aumentan tu crecimiento.",
+    "porquedeberias": "¿Por que Deberias integrar ChatBet?",
+    "conchatbet": "Con ChatBet, retener jugadores nunca ha sido tan fácil. Nuestra IA personaliza cada apuesta, creando experiencias únicas que mantienen los usuarios comprometidos y aumentan tu crecimiento",
     "optimiza": "Optimiza el turnover, atrae nuevos apostadores y mejora la retención, todo mientras maximizas el valor de cada apuesta. Además, gestiona operaciones en múltiples canales de manera ágil y segura, adaptada a cada jugador.",
 
     "entiendeyguia": "Entiende, guia y mejora",
@@ -132,13 +132,13 @@
 
 
     "sincomplicaciones": "Apuestas Sin Complicaciones para tus Usuarios—Todo en un Chat",
-    "tususuariosapuestan": "Con ChatBet, tus usuarios apuestan tan fácil como enviar un mensaje. Sin navegar sitios ni registros largos, todo ocurre en una sola conversación.:",
+    "tususuariosapuestan": "Con ChatBet, tus usuarios apuestan tan fácil como enviar un mensaje. Sin navegar sitios ni registros largos, todo ocurre en una sola conversación.",
     "tususuarioshacen": "Tus usuarios hacen sus apuestas en segundos",
     "enlugar": "En lugar de buscar, simplemente escriben en el chat la apuesta que desean hacer.",
     "ingresan": "Ingresan el monto a apostar",
     "soloindican": "Tus usuarios solo indican cuánto quieren apostar y están listos.",
     "confirman": "Confirman y la apuesta se realiza al instante 🤑",
-    "unmensajerapido": "Un mensaje rápido de confirmación, y la apuesta está activa—sin retrasos ni complicaciones.",
+    "unmensajerapido": "Un mensaje rápido de confirmación, y la apuesta está activa sin retrasos ni complicaciones.",
     "esteproceso": "Este proceso fluido mantiene a los usuarios comprometidos, ofreciendo una experiencia rápida y sin fricciones en su plataforma de mensajería favorita.",
 
     "proteccion": "Protección de primer nivel",
