--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -7,7 +7,25 @@
         "secondtext": "This solution allows your players to place sports bets quickly and easily through their preferred messaging channel, eliminating the need to access the user interface of your sportsbook.",
         "thankstoia": "Thanks to AI",
         "thankstoiatwo": "it simulates a conversation between humans and speaks to your players naturally, providing intelligent communication just like people do, offering a unique, direct, and frictionless experience.",
-        
+        "noapps" : "No Apps. No Websites. No Hassle.", 
+        "realtime": "Real-Time, Personalized Bets",
+        "seamless" : "Seamless Integration for Operators",
+
+        "trusted": "Trusted by Leading igaming operators",
+        "nowavailable": "Now available to use with",
+         
+        "whatischatbet": "What is ChatBet?",
+        "chatbetis": "ChatBet is the first AI-powered conversational betting solution, designed to help iGaming operators provide their users with an intuitive, chat-based betting experience.",
+        "chatbetistwo": "By integrating ChatBet, operators can:",
+        "increase": "Increase engagement:",
+        "players": "Players place bets naturally, just like chatting with a friend",
+        "boost": "Boost retention:",
+        "Aidriven": "AI-driven personalization keeps players coming back",
+        "maximize": "Maximize revenue:",
+        "20monthly": "+20% monthly turnover growth from friction-less betting",
+        "isexclusive":"ChatBet is exclusively available through licensed sportsbook operators—ensuring a fully compliant and secure integration.",
+
+
         "Features": "Enhance Your Operation with ChatBet",
         "Potencie": "Enhance Your Operation with ChatBet",
         "Generación": "News Generation:",
