--- a/src/assets/languages/es.json
+++ b/src/assets/languages/es.json
@@ -7,7 +7,27 @@
     "secondtext": " Esta solución permite a sus jugadores realizar apuestas deportivas de manera rápida y sencilla, a través de su canal de mensajería preferido, omitiendo la necesidad de acceder a la interfaz de usuario de su sportsbook.",
     "thankstoia": "Gracias a la IA",
     "thankstoiatwo": "simula una conversación entre seres humanos y le habla a sus jugadores de forma natural, proporcionando una comunicación inteligente, tal como lo hacen las personas, lo que brinda una experiencia única, directa y sin fricciones.",
+    "noapps" : "Sin aplicaciones. Sin sitios web. Sin complicaciones, ", 
+    "realtime": "Apuestas personalizadas en tiempo real",
+    "seamless" : "Integración perfecta para operadores",
+
+    "trusted": "Confiable para los principales operadores de iGaming",
+    "nowavailable": "Ahora disponible para usar con",
     
+    "whatischatbet": "¿Qué es ChatBet?",
+    "chatbetis": "ChatBet es la primera solución de apuestas conversacionales impulsada por IA, diseñada para ayudar a los operadores de iGaming a ofrecer a sus usuarios una experiencia de apuestas intuitiva basada en chat.",
+    "chatbetistwo": "Al integrar ChatBet, los operadores pueden:",
+    "increase": "Aumentar el engagement:",
+    "players": "Los jugadores realizan apuestas de forma natural, como si estuvieran chateando con un amigo",
+    "boost": "Mejorar la retención:",
+    "Aidriven": "La personalización impulsada por IA hace que los jugadores regresen",
+    "maximize": "Maximizar los ingresos:",
+    "20monthly": "+20% de crecimiento mensual en facturación gracias a apuestas sin fricciones",
+    "isexclusive": "ChatBet está disponible exclusivamente a través de operadores de bookies con licencia, garantizando una integración completamente segura y cumpliendo con todas las normativas.",
+    
+      
+    
+
     "Features":"Potencie su Operación con ChatBet",
     "Potencie":"Potencie su Operación con ChatBet ",
     "Generación":"Generación de Noticias:",
